--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "source-map-explorer 'dist/assets/index-uCSTEB9w.js'"
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -26,6 +27,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.2",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.38",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
