--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@smastrom/react-rating": "^1.5.0",
+    "events": "^3.3.0",
     "firebase": "^10.12.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -28,7 +29,8 @@
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.2",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
